$Id$


v0.71.1		28-Nov-2004

	upgrade:
		Make sure you remove everything related to bbslist menus from
		your menus and txtfiles.

	mbsebbs:
		The creation of the mailout semafore is now after the hangup
		so that mbfido won't start before the bbs is finished.
		Removed bbslist menus, this will become a door.
		Added #define NFGVMIN 1 in openport.

	examples:
		Removed bbs list items from the English menus and txtfiles and
		the Spanish menus and txtfiles.

	lang:
		TODO: remove bbslist entries.


v0.71.0		27-Oct-2004 - 28-Nov-2004

	upgrade:
		Start mbsetup and leave.
		You might want to check menu 8.5, file transfer protocols.

	general:
		From filetranfer records removed the batch and bidirectional
		switches, these are no longer needed.
		Added new subdirectory mbutils. Some sources from the mbsebbs
		subdirectory are moved there.
		Changed the CFLAGS back from -O3 to -O2 since there seem some
		stablity problems and I want to rule out the possibility that
		this is caused by bad gcc optimisation.

	mbsebbs:
		In change handle the first character of the name is not 
		capitalized.
		Changed layout of raw directory listing to support longer
		filenames.
		Rewrote terminal i/o.
		If a user pages the sysop a hint is displayed to fill in the
		reason to chat, language prompt 28.
		After forced chat, redisplay the last menu.
		Removed support for non-batching protocols (xmodem) and for
		bidirectional protocols.
		Removed Ctrl-F G, this is of no use anymore.
		Switched to new modular download and upload functions.
		With download from file areas, the long filename is sent to
		the users, we will only support protocols that allow this.
		When an invalid OLR reply packet is received, it is removed
		from the users upload directory.
		We don't reward upload time anymore, only bytes. It's more
		troubles to implement right then it's worth these days. This
		is caused by telnet connections when we never know what the
		real linespeed is with to/from the user.