@@ -12,6 +12,11 @@ v0.71.1		28-Nov-2004
 		so that mbfido won't start before the bbs is finished.
 		Removed bbslist menus, this will become a door.
 		Added #define NFGVMIN 1 in openport.
+		During hangup we set sighup to ignore.
+		Made zmodem-8k downloads work again.
+
+	mbnewuser:
+		During hangup we set sighup to ignore.
 
 	examples:
 		Removed bbs list items from the English menus and txtfiles and
